--- a/assets/CSS/main_livres.css
+++ b/assets/CSS/main_livres.css
@@ -1494,7 +1494,7 @@ flex-basis: 10%;
 .oeuvre_non_note {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 20% 50% 25% 10% 40% 10%;
+    grid-template-rows: 20% 50% 25% 5% 40% 10%;
     grid-template-areas:  "nav"
                           "top_title"
                           "text1"
@@ -1531,6 +1531,9 @@ flex-basis: 10%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+.button_note input {
+    cursor: pointer;
 }
 .form_note {
     grid-area: grades;
